[deck] fix team slide, add css to position video, move js image preload out of html file, go back to iframe video embedding but leave others behind commented out, remove permalinking to specific slides for nice urls and required paging through the whole deck, stop advancing the deck when clicking anywhere because it doesnt work on the video slide and disables the click back arrow

--- a/media/css/deck.css
+++ b/media/css/deck.css
@@ -1,7 +1,6 @@
-.alternate-background {
-    background-color: black;
-}
-
-.video-demo {
-    background-image: url('/static/images/10-VideoDemo.jpg');
+#video-demo {
+    position: absolute;
+    left: 0;
+    top: 10%;
+    width: 100%;
 }
